# ros2-learning

./: .gitignore  README.md  face.cpp  face.py
notes/: Markdown使用指南.md  ROS2入门.md  oop.cpp.md
project/dev_ws/src/learning_pkg_c/: package.xml
project/dev_ws/src/learning_pkg_python/: package.xml  setup.py
project/dev_ws/src/ros2_21_tutorials/: Humble与Foxy版本兼容性说明.md  install.sh
project/dev_ws/src/ros2_21_tutorials/learning_action_cpp/src/: action_move_client.cpp
project/dev_ws/src/ros2_21_tutorials/learning_gazebo/urdf/: mbot_with_camera_gazebo.xacro  mbot_with_kinect_gazebo.xacro  mbot_with_laser_gazebo.xacro  mbot_with_rgbd_gazebo.xacro
project/dev_ws/src/ros2_21_tutorials/learning_gazebo_harmonic/: package.xml  setup.cfg  setup.py
project/dev_ws/src/ros2_21_tutorials/learning_gazebo_harmonic/config/: ros_gz_bridge_mbot.yaml  ros_gz_bridge_mbot_camera.yaml  ros_gz_bridge_mbot_lidar.yaml  ros_gz_bridge_mbot_rgbd.yaml
project/dev_ws/src/ros2_21_tutorials/learning_gazebo_harmonic/launch/: load_mbot_camera_into_gazebo_harmonic.launch.py  load_mbot_lidar_into_gazebo_harmonic.launch.py  load_mbot_lidar_into_maze_gazebo_harmonic.launch.py  load_mbot_rgbd_into_gazebo_harmonic.launch.py  load_mbot_rgbd_into_maze_gazebo_harmonic.launch.py  load_urdf_into_gazebo_harmonic.launch.py
project/dev_ws/src/ros2_21_tutorials/learning_gazebo_harmonic/urdf/: mbot_base_gazebo_harmonic.xacro  mbot_gazebo_harmonic.xacro  mbot_with_camera_gazebo_harmonic.xacro  mbot_with_lidar.sdf  mbot_with_lidar_gazebo_harmonic.xacro  mbot_with_rgbd_gazebo_harmonic.xacro
project/dev_ws/src/ros2_21_tutorials/learning_node/learning_node/: node_object.py
project/dev_ws/src/ros2_21_tutorials/learning_tf_cpp/: CMakeLists.txt  package.xml
project/dev_ws/src/ros2_21_tutorials/learning_tf_cpp/launch/: turtle_following_demo.launch.py
project/dev_ws/src/ros2_21_tutorials/learning_tf_cpp/src/: static_tf_broadcaster.cpp  tf_listener.cpp  turtle_following.cpp  turtle_tf_broadcaster.cpp
(+3 files in other folders)
